module/alias/multilayer/tests/meta/mod_interface/front/micro_modules_unknown_vis/trybuild.stderr
error: expected one of: `mod`, `use`, `layer`
 --> tests/meta/mod_interface/front/micro_modules_unknown_vis/mod.rs
  |
  |   not_vis mod mod_exposed;
  |   ^^^^^^^
